# hash_calculator

./: Cargo.toml  README.md
src/: hash.rs  main.rs
