[package]
name = "hash_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
data-encoding = "2.3.3"
indicatif = "0.17.2"
sha2 = "0.10.6"
walkdir = "2.3.2"
